remove usage of deprecated method, add missing comment
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>